--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -6,31 +12,112 @@ header{
     color: white;
     align-items: center;
 }
+
 .nav-items{
     gap: 10px;
     display: flex;
 }
+
 .nav-items a{
     color: azure;
     font-weight: bolder;
     text-decoration: underline;
 }
+
+.hero{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    justify-content: center;
+    text-align: center;
+    background: linear-gradient( to top, rgb(55, 55, 122), blue);
+    margin-bottom: 5px;
+    padding: 10rem 7rem;
+}
+
+.hero-content{
+    animation-name: fadeIn;
+    animation-duration: 2s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+}
+
+.cta{
+    padding: 5px;
+    border-radius: 20px;
+    color: white;
+    background-color: black;
+    cursor: pointer;
+}
+
+button:hover{
+background-color: rgb(82, 15, 15);
+scale: 1.2;
+}
+
+.flex-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 10px;
+    border: 2px;
+    margin: 15px;
+    padding: 1.5rem;
+    border-radius: 20px;
+    background-color: aquamarine;
+    max-width: 550px;
+}
+
+.card:hover{
+    box-shadow: 2px 3px  grey;
+    transform: scale(1.02);
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    margin: 25px;
+    border: 2px;
+    padding: 2pxpx;
+    border-radius: 20px;
+    background-color: blue;
+    color: white;
+    cursor: pointer;
+}
+
+.footer:hover{
+    scale: 1.1;
+}
+
 @media (max-width: 600px){
     header{
         flex-direction: column;
         align-items: start;
     }
-}
-.hero{
-    display: flex;
-    flex-direction: column;
-    height: 60vh;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: linear-gradient( to top, rgb(55, 55, 122), blue);
+
+    .card{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flex-container{
+        flex-direction: column;
+        width: 100%;
+        flex-wrap: wrap;
+    }
 }
 
-@keyframes identifier {
-    
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
